# haskell-book

./: .gitignore  01-intro.hs  haskell-book.cabal
01-haskell-basics/: homework-1.hs
02-algebraic-data-types/: LogAnalysis.hs
03-rec-poly/: Golf.hs
03-recursion-patterns-and-polymorphism/: Golf.hs
04-higher-order/: homework-4.hs
05-type-classes/: Calc.hs
cis-194/03-rec-poly/: Golf.hs
cis-194/05-type-classes/: Calc.hs
haskell-book/: haskell-book.cabal
haskell-book/.stack-work/ghci/091c5342/: cabal_macros.h
haskell-book/.stack-work/install/x86_64-linux-tinfo6/lts-13.14/8.6.4/doc/haskell-book-0.1.0.0/: LICENSE
haskell-book/.stack-work/install/x86_64-linux-tinfo6/lts-13.14/8.6.4/flag-cache/: haskell-book-0.1.0.0-LflG2GFlJcKEJDaJf9PPFF
haskell-book/.stack-work/install/x86_64-linux-tinfo6/lts-13.14/8.6.4/pkgdb/: haskell-book-0.1.0.0-LflG2GFlJcKEJDaJf9PPFF.conf  package.cache
haskell-book/src/Chapter06/: Exercises.hs  exercises.hs
haskell-book/src/Chapter08/: exercises.hs
haskell-book/src/Chapter09/: exercises.hs
haskell-book/src/Chapter10/: Exercises.hs  Notes.hs  Review.hs  notes.hs  review.hs  standard.hs
haskell-book/src/Chapter11/: AsPatterns.hs  BinaryTree.hs  HuttonsRazor.hs  asPatterns.hs  exercises.hs  multipleChoice.hs
haskell-book/src/Chapter12/: DetermineTheKinds.hs  IterateAndUnfoldr.hs  OnlyNatural.hs  SmallEitherLibrary.hs  binaryTree.hs  determineTheKinds.hs  onlyNatural.hs  stringProcessing.hs
haskell-book/src/Chapter13/: Intermission.hs  intermission.hs  palindrome.hs
haskell-book/src/Chapter14/: Addition.hs  BasicProperties.hs  Idempotence.hs  Intermission.hs
haskell-programming-first-principles/05-types/: exercises.hs
haskell-programming-first-principles/07-more-functional-patterns/: exercises.hs
haskell-programming-first-principles/09-lists/: Cipher.hs  cipher.hs  dataChar.hs  standard.hs
haskell-programming-first-principles/10-folding-lists/: exercises.hs  standard.hs
haskell-programming-first-principles/11-algebraic-datatypes/: Cipher.hs  Vigenere.hs  asPatterns.hs  binaryTree.hs  huttonsRazor.hs  multipleChoice.hs  phone.hs  vigenere.hs
haskell-programming-first-principles/12-signaling-adversity/: binaryTree.hs  determineTheKinds.hs  iterateAndUnfoldr.hs  onlyNatural.hs  smallEitherLibrary.hs  smallMaybeLibrary.hs  stringProcessing.hs
haskell-programming/02-hello-haskell/: exercises.hs
haskell-programming/03-strings/: exercises.hs
haskell-programming/05-types/: exercises.hs
src/02/: Exercises.hs
src/04/: Exercises.hs
src/05-types/: Exercises.hs
src/07/: Exercises.hs
(+189 files in other folders)
