name:                haskell-book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jacksoncooper/haskell-book
-- license:
-- license-file:
author:              Jackson Cooper
maintainer:          jacksoncooper@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , checkers
                     , containers
                     , criterion
                     , dlist
                     , hedis
                     , hspec
                     , mtl
                     , network-uri
                     , QuickCheck
                     , random
                     , raw-strings-qq
                     , scotty
                     , semigroups
                     , parsers
                     , text
                     , transformers
                     , trifecta
